@@ -1,5 +1,10 @@
 2012-04-02  Richard Guenther  <rguenther@suse.de>
 
+	PR tree-optimization/52756
+	* gcc.dg/torture/pr52756.c: New testcase.
+
+2012-04-02  Richard Guenther  <rguenther@suse.de>
+
 	PR middle-end/52803
 	* gcc.dg/pr52803.c: New testcase.
 
